<resources>
    <string name="app_name">PetOwners</string>
    <string name="applogo_content_description">Pet\'s Friend</string>
    <string name="fullname_edit_text">Full Name</string>
    <string name="email_edit_text">Email</string>
    <string name="password_edit_text">Password</string>
    <string name="signup_button_text">SIGN UP</string>
    <string name="login_link">Already have an account? Login here.</string>
    <string name="signup_link">No account yet? Create one.</string>
    <string name="forgot_password_link"><u>Forgot your password?</u></string>
    <string name="login_button_text">LOGIN</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="user_fullname">User Name</string>
    <string name="email_text">Email:</string>
    <string name="phone_icon">Phone</string>
    <string name="phone_text_example">(123) 456/7890</string>
    <string name="email_text_example">email</string>
    <string name="pet_information_text">Pets</string>
    <string name="pet_icon">Pet image</string>
    <string name="user_information_text">User</string>
    <string name="pet_one">Şira</string>
    <string name="waits_for_adoption_text">Hello, I am waiting for adoption :)</string>
    <string name="pet_two">Cupcake</string>
    <string name="reset_your_password_title">RESET YOUR PASSWORD</string>
    <string name="reset_your_password_message">Enter your email address and we will send you a link to reset your password.</string>
    <string name="pw_reset_dialog_positive_button">SEND</string>
    <string name="pw_reset_dialog_negative_button">CANCEL</string>
    <string name="fill_in_email_field_text">Please fill in the email field</string>
    <string name="successful_password_reset_email_link_send">A password reset email link has been send to your email</string>
    <string name="fail_password_reset_email_link_send">Error while sending the password reset email link</string>
    <string name="fill_in_required_fields_text">Please fill in required fields</string>
    <string name="auth_fail_text">Authentication failed.</string>
    <string name="successful_signup_message_text">You\'ve successfully signed up</string>
    <string name="password_size_constraint_text">Password has to be at least 6 characters</string>
    <string name="chat_fragment_tab_title">Chats</string>
    <string name="map_search_fragment_tab_title">Map Search</string>
    <string name="menu_option_edit_profile">Edit Profile</string>
    <string name="menu_option_settings">Settings</string>
    <string name="phone_hint">Phone number</string>
    <string name="save">Save</string>
    <string name="COLLECTION_USERS">users</string>
    <string name="COLLECTION_PETS">pets</string>
    <string name="NO_BIOGRAPHY">Tap to add an about me..</string>
    <string name="PHONE_NUMBER_KEY">phoneNumber</string>
    <string name="about_me">About me</string>
    <string name="about_me_example">I am 22. I have 2 cats which ..</string>
    <string name="BIO_KEY">biography</string>
    <string name="edit_your_bio_title">Add about me</string>
    <string name="bio_dialog_positive_button">OK</string>
    <string name="fill_in_bio_text">Please right something about yourself</string>
    <string name="bio_dialog_negative_button">CANCEL</string>
    <string name="successful_profile_update_message">Profile updated successfully</string>
    <string name="no_adoption">I am not for adoption.</string>
    <string name="pet_profile_pic">Pet profile picture</string>
    <string name="pet_name_edit_text">Pet name</string>
    <string name="pet_age_edit_text">Pet age</string>
    <string name="cancel_button">Cancel</string>
    <string name="add_pet_dialog_button">ADD</string>
    <string name="gender_girl">Girl</string>
    <string name="gender_boy">Boy</string>
    <string name="cancel_dialog_button">Cancel</string>
    <string name="dialog_adoption_checkbox_text">Is for adoption?</string>
    <string name="add_a_new_pet_title">Add a new pet</string>
    <string name="type_cat">Cat</string>
    <string name="type_dog">Dog</string>
    <string name="successful_pet_addition_message">You\'ve added a new pet!</string>
    <string name="PETLIST_KEY">petList</string>
    <string name="about_pet">Tell us about your pet..</string>
    <string name="log_out">Log Out</string>
    <string name="logout_icon">Log out</string>
    <string name="map_search_text">Search a place</string>
    <string name="explain_the_need_for_permission">The map feature needs your location to function properly</string>
    <string name="LATITUDE_KEY">latitude</string>
    <string name="LONGTITUDE_KEY">longtitude</string>
    <string name="LOCATION_KEY">location</string>
    <string name="USER_WANTS_TO_ADOPT_STATE">Waiting to adopt a pet..</string>
    <string name="USER_WANTS_TO_POST_FOR_ADOPTION_STATE">Have a pet ready to be adopted..</string>
    <string name="USER_DEFAULT_STATE">Not interested</string>
    <string name="USER_PROFILE_UID">user_profile_uid</string>
    <string name="EMAIL_KEY">email</string>
    <string name="message">Type your message</string>
    <string name="user_bio">user bio information</string>
    <string name="all_users_title">All Users</string>
    <string name="menu_option_allusers">See all users</string>
    <string name="storage_users_ref">users</string>
    <string name="storage_profile_ref">profile.jpg</string>
    <string name="DEVICE_TOKEN_KEY">deviceToken</string>
    <string name="USER_PROFILE_NAME">user_profile_name</string>
    <string name="chat_user_name">User Name</string>
    <string name="send_btn">send</string>
    <string name="COLLECTION_MESSAGES">messages</string>
    <string name="CONVERSATIONS_LIST_KEY">conversationList</string>
    <string name="SENDER_KEY">sender</string>
    <string name="RECEIVER_KEY">receiver</string>
    <string name="COLLECTION_MY_MESSAGES">myMessages</string>
    <string name="DATE_KEY">date</string>
    <string name="date">date</string>
    <string name="COLLECTION_NOTIFICATIONS">notifications</string>
    <string name="last_message">last message</string>
    <string name="info_window_title">info window title</string>
    <string name="info_window_body">info window body</string>
    <string name="view_profile">* Tap to view profile..</string>
    <string name="UID_KEY">uid</string>
    <string name="COLOR_KEY">color</string>
    <string name="upload_image_button_content_description">Upload image</string>
    <string name="upload_image">uploaded image file</string>
    <string name="pet_name">Pet name</string>
    <string name="pet_gender">Gender</string>
    <string name="pet_age">Age</string>
    <string name="pet_bio">Yummm yum yummm..</string>
    <string name="pet_owner">Owner</string>
    <string name="pet_adoption_state">State</string>
    <string name="EXTRA_PET_NAME">extra_pet_name</string>
    <string name="EXTRA_PET_GENDER">extra_pet_gender</string>
    <string name="EXTRA_PET_ABOUT">extra_pet_about</string>
    <string name="EXTRA_PET_OWNER">extra_pet_owner</string>
    <string name="EXTRA_PET_TYPE">extra_pet_type</string>
    <string name="EXTRA_PET_ADOPTION_STATE">extra_pet_adoption_state</string>
    <string name="pick_pet_gender">Pick gender</string>
    <string name="pick_pet_type">Pick type</string>
    <string name="pet_age_checkbox_text">Pick birthday</string>
    <string name="pet_type">Type</string>
    <string name="EXTRA_PET_UID">extra_pet_uid</string>
    <string name="EXTRA_PET_OWNER_UID">extra_pet_owner_uid</string>
    <string name="service_not_available">Unable to fetch the addresss , please check network connection</string>
    <string name="invalid_lat_long_used">The latitude, longtitude values provided are invalid</string>
    <string name="no_address_found">No address found for the given location coordinates</string>
    <string name="address_found">Address for the given location coordinates is found</string>
    <string name="no_geocoder_available">No geocoder available</string>
    <string name="EXTRA_PET_LOCATION">extra_pet_location</string>
    <string name="pet_location">Location</string>
    <string name="IMAGE_UPLOAD_ERROR">Image could not be saved please try again..</string>
    <string name="USER_PROFILE_IMAGE_URI_KEY">profileImageUri</string>
    <string name="EXTRA_PET_PROFILE_IMAGE_URI">extra_pet_profile_image_uri</string>
    <string name="PROFILE_IMAGE_URI_KEY">profileImageUri</string>
    <string name="OWNER_UID_KEY">ownerUid</string>
    <string name="please_select_pet_profile">Please select an image for the pet</string>
    <string name="delete_pet_text_view">Delete Pet</string>
    <string name="delete_icon_content_description">Delete</string>
    <string name="PET_UID_KEY">petUid</string>
    <string name="successful_pet_deletion_message">Pet successfully deleted</string>
    <string name="failed_pet_deletion_message">Failed to delete the pet</string>
    <string name="send_message_to_owner">SEND MESSAGE TO OWNER</string>
    <string name="display_owner_profile">DISPLAY OWNER PROFILE</string>
    <string name="or_text">OR</string>
    <string name="edit_pet_title">Edit your pet</string>
    <string name="edit_pet_dialog_button">Edit</string>
    <string name="successful_pet_edition_message">Successfully edited the pet information</string>
    <string name="name_and_about_field_cannot_be_empty">Fields name and about cannot be left empty</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_view">No pets found</string>
    <string name="notification_message">Notification message</string>
    <string name="upload_icon">Upload</string>
    <string name="invalid_place_name_used">There is no such place</string>
    <string name="no_address_found_with_the_place_name">No address found with this place name</string>
    <string name="ADMIN_AREA_KEY">adminArea</string>
    <string name="COUNTRY_KEY">country</string>


    <string name="adminArea_country_placeholder">%1$s , %2$s</string>
    <string name="menu_option_explore">Explore</string>
    <string name="pets">Pets</string>
    <string name="home">Home</string>
    <string name="pet_card_image">Pet Image</string>
    <string name="pref_adoption_state">Adoption State</string>
    <string name="PET_ADOPTION_STATE_KEY">adoptionState</string>


    <!-- Preferences titles & summaries-->
    <string name="category_pref_discovery">Discovery Settings</string>
    <string name="title_adoption_state">Ready for adoption?</string>
    <string name="summary_on_adoption_state">On</string>
    <string name="summary_off_adoption_state">Off</string>
    <string name="title_select_type">Pet Type</string>
    <string name="dialog_title_select_type">Select pet type</string>
    <string name="pref_show_me">Show me</string>


    <!-- Preferences keys-->
    <string name="key_select_type" translatable="false">key_select_type</string>
    <string name="key_country" translatable="false">key_country</string>
    <string name="key_gender_girl" translatable="false">key_gender_girl</string>
    <string name="key_gender_boy" translatable="false">key_gender_boy</string>
    <string name="key_adoption_state" translatable="false">key_adoption_state</string>
    <string name="default_pet_type">0</string>
    <string name="PET_GENDER_KEY">gender</string>
    <string name="PET_TYPE_KEY">type</string>
    <string name="action_settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="adoption_state_filter">adoption_state_filter</string>
    <string name="show_me_filter">show_me_filter</string>
    <string name="pet_type_filter">pet_type_filter</string>
    <string name="card_image_view">Pet Image</string>
    <string name="widget_my_pets">My Pets</string>
</resources>
