<android.support.v4.widget.NestedScrollView android:id="@+id/user_information_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/scrolling_linearlayout_margin_top"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bio_title_text_view"
            android:layout_marginStart="@dimen/bio_title_text_view_margin_left"
            android:layout_marginLeft="@dimen/bio_title_text_view_margin_left"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/about_me"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bio_text_view"
            app:fontFamily="@font/helvetica_neueit"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginStart="@dimen/bio_margin_left"
            android:layout_marginLeft="@dimen/bio_margin_left"
            android:layout_marginTop="@dimen/bio_margin_top"
            android:layout_marginBottom="@dimen/bio_margin_bottom"
            android:textColor="@color/colorSecondaryText" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/phone_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:contentDescription="@string/phone_icon"
                android:src="@drawable/phone_icon" />

            <EditText
                android:id="@+id/phone_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/phone_icon"
                android:layout_toRightOf="@id/phone_icon"
                android:text="@string/phone_text_example"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorBlack"
                android:hint="@string/phone_hint"
                android:inputType="phone" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/email_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:contentDescription="@string/phone_icon"
                android:src="@drawable/email_icon" />

            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/email_icon"
                android:layout_toRightOf="@id/email_icon"
                android:hint="@string/email_text"
                android:text="@string/email_text_example"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorBlack"
                android:inputType="textEmailAddress" />

        </RelativeLayout>

        <include layout="@layout/item_divider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pets_text_margin_top"
            android:layout_marginStart="@dimen/pets_text_margin_left"
            android:layout_marginLeft="@dimen/pets_text_margin_top"
            android:textColor="@color/colorPrimaryDark"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/pet_information_text"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/pets_list_view"
            android:layout_marginBottom="@dimen/listview_margin_bottom">
        </ListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/ic_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:contentDescription="@string/logout_icon"
                android:src="@drawable/ic_lock" />

            <TextView
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="@string/log_out"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorBlack" />

        </LinearLayout>


    </LinearLayout>
</android.support.v4.widget.NestedScrollView>

