<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/settings_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="18dp"
        android:background="@color/colorPrimaryThree"
        android:contentDescription="@string/menu_option_settings"
        android:src="@drawable/ic_settings"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="37dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/settings_image_button"
        android:layout_centerHorizontal="true"
        android:text="@string/pets"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorWhite" />

    <ImageButton
        android:id="@+id/home_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/settings_image_button"
        android:layout_marginEnd="53dp"
        android:background="@color/colorPrimaryThree"
        android:contentDescription="@string/home"
        android:src="@drawable/ic_home"
        android:layout_alignParentRight="true"
        android:layout_marginRight="53dp" />


</RelativeLayout>