<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/linearlayout_margin_size"
        android:layout_marginRight="@dimen/linearlayout_margin_size"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:background="@drawable/logo"
            android:contentDescription="@string/applogo_content_description"
            android:scaleType="centerCrop" />


        <!--                 Email Field                   -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorBlack">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_edit_text"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                android:textSize="@dimen/input_text_size" />

        </android.support.design.widget.TextInputLayout>

        <!--                 Password Field                   -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/password_field_margin_top"
            android:textColorHint="@color/colorBlack">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_edit_text"
                android:inputType="textPassword"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                android:textSize="@dimen/input_text_size" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/forgot_password_link"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/forgot_password_link_margin_top"
            android:gravity="end"
            android:text="@string/forgot_password_link"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/forgot_password_link_text_size" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--            LOGIN BUTTON            -->
            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_button_margin_top"
                android:background="@color/colorAccent"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/login_button_text" />

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/progress_bar"
                android:visibility="invisible"
                android:layout_gravity="center"
                android:elevation="@dimen/progress_bar_elevation"/>


        </FrameLayout>

        <TextView
            android:id="@+id/signup_link"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/signup_link_margin_top"
            android:gravity="center"
            android:text="@string/signup_link"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/signup_link_text_size" />


    </LinearLayout>


</ScrollView>